<resources>
    <string name="app_name">Android Calculator</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="dot">.</string>
    <string name="result">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">x</string>
    <string name="devision">/</string>
    <string name="backspace">←</string>
    <string name="settings">Настройки</string>
    <string name="clear_all">C</string>
    <string name="settingsText">Настройки</string>
    <string name="SettingsOffText">Скругление ВЫКЛ</string>
    <string name="SettingsOnText">Скругление ВКЛ</string>
    <string name="SettingsCircleButtonsText">Скругление клавиш</string>
    <string name="SettingsThemeText">Тема</string>
    <string name="SettingsBackgroundText">Фоновое изображение</string>
    <string name="ThemeDefaultText">По умолчанию</string>
    <string name="ThemeColoredText">Цветная</string>
    <string name="Back">Назад</string>
</resources>